--- a/shower/themes/ribbon/styles/screen.scss
+++ b/shower/themes/ribbon/styles/screen.scss
@@ -242,6 +242,10 @@ a {
 	// Cover
 	&.cover {
 		background:#000;
+		div {
+			position: relative;
+			top: 60px;
+		}
 		@mixin cover {
 			img, svg, video,
 			object, canvas {
