--- a/shower/themes/ribbon/styles/screen.scss
+++ b/shower/themes/ribbon/styles/screen.scss
@@ -506,20 +506,20 @@ a {
 			}
 		}
 	}
-#Cover h2 {
+.cover-text h2 {
 			margin:30px 0 0;
 			color:#FFF;
 			text-align:center;
 			font-size:70px;
 			}
-		#Cover p {
+		.cover-text p {
 			margin:10px 0 0;
 			text-align:center;
 			color:#FFF;
 			font-style:italic;
 			font-size:20px;
 			}
-			#Cover p a {
+			.cover-text p a {
 				color:#FFF;
 				}
 		#Picture h2 {
